--- a/weapp/termite/static/termite_js/app/component/wepage/image/image.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/image/image.html
@@ -12,6 +12,7 @@
         {% if component.model.displayMode == 'swipe' %}
             {% if in_production_mode %}
                 <div 
+                    testTag="test"
                     data-ui-role="swipeimage" 
                     data-jsondata='{{component|to_swipe_images_json}}' 
                     data-showtitle='true'
