刮刮卡组件修改

--- a/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
@@ -2,7 +2,7 @@
 
 
 {% ifequal component.type 'appkit.scratchdescription' %}
-    <div class="wui-surveyDescription wui-lotterydescription">
+    <div class="wui-surveyDescription wui-lotterydescription xa-scratchdescription">
         <div class="wui-i-roulette wui-i-title">
             <h1 class="wui-i-innerTitle">
                 <p class="xa-title">{{component.model.title}}</p>
