--- a/weapp/apps/customerized_apps/egg/templates/editor/eggs.html
+++ b/weapp/apps/customerized_apps/egg/templates/editor/eggs.html
@@ -5,7 +5,7 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
+			<li><a href="/apps/egg/eggs/">百宝箱</a></li>
 			<li class="active">砸金蛋</li>
 		</ul>
 	</div>
