--- a/weapp/apps/customerized_apps/egg/templates/webapp/m_egg.html
+++ b/weapp/apps/customerized_apps/egg/templates/webapp/m_egg.html
@@ -122,18 +122,11 @@
 {% block js %}
     <script>
         function afterStop(data){
-            //更新可玩次数和剩余积分
-            can_play_count = data.can_play_count;
-            if(can_play_count == -1){
-                $('.wui-lotterydescription .xa-header').addClass('wui-lotterydescription-hide');
-            }else{
-                $('.wui-lotterydescription .xa-header').removeClass('wui-lotterydescription-hide').find('p>b').html(can_play_count);
-            }
+            //更新剩余积分
             $('.xa-remainedIntegral p>b').html(data.remained_integral);
             //更新中奖历史
             var newRecord = data.newRecord;
             if(!$.isEmptyObject(newRecord)){
-                //var new_str = "<li>" + newRecord.prize_title+ '  '+ newRecord.prize_name+'  '+newRecord.created_at + "</li>";
                 var new_str = "<li>" + newRecord.prize_title+ '&nbsp;&nbsp;&nbsp;&nbsp;'+ newRecord.prize_name+"</li>";
                 $('.wui-i-record').find('.xa-recordData').find('p').remove();
                 $('.wui-i-record').find('.xa-recordData').prepend(new_str);
@@ -157,8 +150,8 @@
                     return false;
                 }
                  W.getApi().call({
-                        app: 'm/apps/lottery',
-                        resource: 'lottery_prize',
+                        app: 'm/apps/egg',
+                        resource: 'egg_prize',
                         method: 'post',
                         args:{
                             id: W.appRecordId,
@@ -181,21 +174,12 @@
                 if (!W.isMember) {
                     that.$el.hide();
                     showQrcode(W.qrcodeUrl);
-                    //$('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
-                    //        '<img height="205px" width="205px" src="'+ W.qrcodeUrl+'">' +
-                    //        '</div><div></div>');
                 }
                 else {
                     window.location.href = '/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id=' + W.webappOwnerId;
                 }
 
             });
-            //初始化result dialog
-            //this.$mask = $('<div class="wui-mask"></div>');
-            //this.$mask.on('click', function(){
-            //    that.close();
-            //});
-            //$('body').append(this.$mask);
             this.$el.find('.xa-closeDialog').on('click',function(){
                 that.close();
             });
@@ -224,7 +208,6 @@
                 this.$closeBtn.show();
             }else if(prize_type == 'none'){
                 this.$title.html('很遗憾').show();
-                //this.$contentHeader.html("奖品已抽光,下次请早点来!");
                 this.$contentHeader.html("没有中奖，再接再厉吧~");
                 this.$userCenter.hide();
                 this.$closeBtn.show();
@@ -260,118 +243,9 @@
             }
         };
         ResultDialog.prototype.close = function(){
-            //this.$mask.hide();
-            //$('.wui-lotterydescription').find('.wui-i-body').find(".xa-lottery-unit-"+prizeIndex).css({
-             //   'transform': 'scale(1, 1)',
-             //   '-webkit-transform': 'scale(1, 1)',
-              //  'z-index': '0'
-            //});
             mask('hide');
             this.$el.hide();
-        };
-
-        function Roulette($lottery){
-            var that = this;
-            this.index = -1;
-            this.count = 0;
-            this.timer = 0;
-            this.speed = 100;
-            this.times = 0;
-            this.cycle = 50;
-            this.prize = -1;
-            this.isRolling = false;
-            this.light_index = -1;
-            this.light_count = 0;
-            this.light_speed = 100;
-            this.lights_timer = 0;
-            this.$lottery = $lottery;
-            this.PRIZE = {
-                谢谢参与: function(){return getRandomStopPosition(['1', '5', '8', '10'])}, //谢谢参与位置
-                一等奖: function(){return getRandomStopPosition(['0', '7'])}, //一等奖位置
-                二等奖: function(){return getRandomStopPosition(['2', '4', '9'])}, //二等奖位置
-                三等奖: function(){return getRandomStopPosition(['3', '6', '11'])} //三等奖位置
-            };
-            function getRandomStopPosition(arr){
-                var len = arr.length - 1;
-                return arr[parseInt(Math.random()*len+0.5)];
-            }
-
-            //初始化
-            var len = $lottery.find(".xa-lottery-unit").length;
-            if(len>0){
-                this.count = len;
-                $lottery.find(".xa-lottery-unit-"+this.index).addClass("active");
-                //lights
-                this.light_count = $lottery.find(".xui-circle").length;
-            }else{
-                return void(0);
-            }
-        }
-        Roulette.prototype.move = function(){
-            //lottery
-            var $lottery = this.$lottery;
-            $lottery.find(".xa-lottery-unit-"+this.index).removeClass("active");
-            //$lottery.find(".xa-lottery-unit-"+this.index).css({
-             //   'transform': 'scale(1, 1)',
-             //   '-webkit-transform': 'scale(1, 1)',
-             //   'z-index': '0'
-            //});
-            this.index++;
-            if(this.index>=this.count){
-                this.index = 0;
-                this.times ++;
-            }
-            $lottery.find(".xa-lottery-unit-"+this.index).addClass("active");
-            //$lottery.find(".xa-lottery-unit-"+this.index).css({
-            //    'transform': 'scale(1.2, 1.2)',
-             //   '-webkit-transform': 'scale(1.2, 1.2)',
-             //   'z-index': '999'
-            //});
-            //lights
-            var light_index = this.light_index;
-            $lottery.find(".xa-circle-unit-"+light_index).removeClass("active");
-            light_index += 1;
-            if(light_index>this.light_count){
-                light_index = 0;
-            }
-            $lottery.find(".xa-circle-unit-"+light_index).addClass("active");
-            this.light_index = light_index;
-        };
-        Roulette.prototype.stop = function(data){
-            this.retuenData = data;
-            console.log(this.retuenData.result);
-            var index = this.PRIZE[this.retuenData.result]();
-            this.prize = parseInt(index);
-        };
-        Roulette.prototype.roll = function(){
-            this.isRolling = true;
-            this.move();
-            if(this.prize == -1 || this.times<3){
-                if(this.speed > 50) this.speed -= 10;
-            }else{
-                if(this.speed >= 250 && ((this.prize == 0 && this.index == 7) || this.prize == this.index)){
-                    clearTimeout(this.timer);
-                    this.times = 0;
-                    this.prize = -1;
-                    this.speed = 100;
-                    this.isRolling = false;
-                    prizeIndex = this.index;
-                    resultDialog = resultDialog || new ResultDialog();
-                    resultDialog.render({
-                        'prize_type': this.retuenData.prize_type,
-                        'prize_name': this.retuenData.prize_name,
-                        'delay': true
-                    });
-                    afterStop(this.retuenData);
-                    return;
-                }
-                this.speed += 20;
-            }
-            var that = this;
-            this.timer = setTimeout(function(){
-                that.roll();
-            },this.speed);
-        };
+        };       
     </script>
     <script type="text/javascript">
         var lottery_status, can_play_count, resultDialog, activity_status, prizeIndex;
@@ -383,16 +257,10 @@
 
         function initLottery(){
             resultDialog = new ResultDialog();
-            var $container = $('.wui-lotterydescription').find('.wui-i-body');
-            var lottery = new Roulette($container);
-            $(".xa-lottery-go").click(function(){
+
+            $(".wui-i-egg").click(function(){
                 var _that = this;
-                $(this).addClass('xa-lottery-go-to');
-                window.setTimeout(function(){
-                    $(_that).removeClass('xa-lottery-go-to');
-                }, 100);
-                if(lottery.isRolling || !lottery_status || can_play_count==0){
-                    if(lottery.isRolling) return false;
+                if(!lottery_status || can_play_count==0){
                     if(activity_status == '未开始'){
                         resultDialog.render({
                             prize_type: 'notready'
@@ -407,16 +275,21 @@
                     return false;
                 }else{
                     W.getApi().call({
-                        app: 'm/apps/lottery',
-                        resource: 'lottery_prize',
+                        app: 'm/apps/egg',
+                        resource: 'egg_prize',
                         method: 'put',
                         args:{
                             id: W.appRecordId,
                             webapp_owner_id: W.webappOwnerId
                         },
                         success: function(data){
-                            lottery.roll();
-                            lottery.stop(data);
+                            resultDialog = resultDialog || new ResultDialog();
+                            resultDialog.render({
+                                'prize_type': data.prize_type,
+                                'prize_name': data.prize_name,
+                                'delay': true
+                            });
+                            afterStop(data);
                         },
                         error: function(error){
                             if(error.errMsg == '奖品已抽光'){
@@ -435,15 +308,14 @@
         function getDynamicData(){
             loadingStatus(true);
             W.getApi().call({
-                app: 'm/apps/lottery',
-                resource: 'm_lottery',
+                app: 'm/apps/egg',
+                resource: 'm_egg',
                 method: 'get',
                 args: {
                     webapp_owner_id: W.webappOwnerId,
                     id: W.appRecordId
                 },
                 success: function(data) {
-                    console.log(data);
                     var member_info = data.member_info;
                     renderDynamicData(member_info);
                     getHistory(data.lottery_history);
@@ -467,16 +339,9 @@
             W.isMember = member_info.isMember;
             //可参与次数
             can_play_count = member_info.can_play_count;
-            if(can_play_count == -1){
-                $('.wui-lotterydescription .xa-header').addClass('wui-lotterydescription-hide');
-            }else{
-                $('.wui-lotterydescription .xa-header').removeClass('wui-lotterydescription-hide').find('p>b').html(can_play_count);
-            }
             //会员信息
             var remained_integral = member_info.remained_integral;
-            $('.xa-remainedIntegral').find('p>b').html(remained_integral);
-
-
+            $('.xa-remainedIntegral b').html(remained_integral);
         }
 
         function getHistory(hisData){
