--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -2667,3 +2667,61 @@ li.wui-selectBox-display-table {
     background-position: 0 -34px;
 }
 /*百宝箱 evaluate CSS ---- end */
+
+/*百宝箱 egg CSS ---- start */
+.wui-eggDescription {
+	background: url(/termite_static/img/component/egg/egg_bg.jpg) no-repeat;
+	background-size: cover;
+    height: 460px;
+    margin-top: -18px;
+    position: relative;
+    padding: 0 10px 0;
+}
+.wui-eggDescription .wui-i-egg{
+	background: url(/termite_static/img/component/egg/egg_normal.png) no-repeat;
+	background-size: cover;
+	width: 137px;
+	height: 180px;
+	position: absolute;
+	left: 50%;
+	margin-left: -67px;
+	bottom: 57px;
+}
+.wui-eggDescription .wui-i-eggBroken{
+    background: url(/termite_static/img/component/egg/egg_broken.png) no-repeat;
+    background-size: cover;
+    width: 250px;
+    height: 182px;
+    position: absolute;
+    left: 5%;
+    bottom: 57px;
+ 	display: none;
+}
+.wui-eggDescription .wui-i-integral{
+	position: absolute;
+	bottom: 5px;
+	width: 87%;
+	background: rgba(0,0,0,0.1);
+	padding: 5px 12px;
+	border-radius: 15px;
+	font-size: 14px;
+}
+.wui-eggDescription .wui-i-integral > p{
+	display: inline-block;
+	color: #fff;
+	margin-right: 18px;
+}
+.wui-eggDescription .wui-i-integral > p:last-child{
+	margin-right: 0;
+}
+.wui-surveyDescription .wui-i-eggInfo{
+	border-top: none;
+}
+.wui-surveyDescription .wui-i-eggSubtitle{
+	text-align: center;
+}
+.wui-surveyDescription .wui-i-eggSubtitle h2{
+	background: url(/termite_static/img/component/egg/egg_intro.png) no-repeat top center;
+	background-size: contain;
+}
+/*百宝箱 egg CSS ---- end */
