--- a/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
@@ -6,8 +6,8 @@
         <div class="wui-i-egg"></div> 
         <div class="wui-i-eggBroken"></div>
         <div class="wui-i-integral">
-            <p>消耗积分:</p>
-            <p>奖励积分:</p>
+            <p>消耗积分:{{ component.model.expend }}</p>
+            <p>奖励积分:{{ component.model.delivery }}</p>
             <p class="xa-remainedIntegral">剩余积分:<b></b></p>
         </div>
     </div>
