--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -2675,7 +2675,7 @@ li.wui-selectBox-display-table {
     height: 460px;
     margin-top: -18px;
     position: relative;
-    padding: 0 10px 0;
+    padding: 0 10px;
 }
 .wui-eggDescription .wui-i-egg{
 	background: url(/termite_static/img/component/egg/egg_normal.png) no-repeat;
@@ -2699,8 +2699,8 @@ li.wui-selectBox-display-table {
 }
 .wui-eggDescription .wui-i-integral{
 	position: absolute;
-	bottom: 5px;
-	width: 87%;
+	bottom: 13px;
+	width: 88%;
 	background: rgba(0,0,0,0.1);
 	padding: 5px 12px;
 	border-radius: 15px;
@@ -2710,6 +2710,7 @@ li.wui-selectBox-display-table {
 	display: inline-block;
 	color: #fff;
 	margin-right: 18px;
+	width: 28%;
 }
 .wui-eggDescription .wui-i-integral > p:last-child{
 	margin-right: 0;
@@ -2718,10 +2719,12 @@ li.wui-selectBox-display-table {
 	border-top: none;
 }
 .wui-surveyDescription .wui-i-eggSubtitle{
+	background: url(/termite_static/img/component/egg/egg_intro.png) no-repeat top center;
+	background-size: auto 26.5px;;
 	text-align: center;
+	height: 30px;
 }
 .wui-surveyDescription .wui-i-eggSubtitle h2{
-	background: url(/termite_static/img/component/egg/egg_intro.png) no-repeat top center;
-	background-size: contain;
+	line-height: 26px;
 }
 /*百宝箱 egg CSS ---- end */
