--- a/weapp/termite/workbench/templates/workbench/wepage_webapp_page.html
+++ b/weapp/termite/workbench/templates/workbench/wepage_webapp_page.html
@@ -11,6 +11,7 @@
 <script type="text/javascript">
     W.preloadImgsOnPage([
         { moduleName: 'imageGroup', tagId: '.wui-imageGroup a img' },
+        { moduleName: 'imageNav', tagId: '.wui-imagenav a img' },
         { moduleName: 'productList', tagId: '.xa-products-box ul li img' },
    ]);
 </script>
