--- a/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
@@ -3,8 +3,8 @@
 
 {% ifequal component.type 'appkit.eggdescription' %}
     <div class="wui-surveyDescription wui-eggDescription">
-        <div class="wui-i-egg"></div> 
-        <div class="wui-i-eggBroken"></div>
+        <div class="wui-i-egg wa-egg"></div> 
+        <div class="wui-i-eggBroken wa-egg"></div>
         <div class="wui-i-integral">
             <p>消耗积分:{{ component.model.expend }}</p>
             <p>奖励积分:{{ component.model.delivery }}</p>
